chore: update changelog